# dqn-adaptive-cruise

./: .gitignore  DRL_on_Robotics.md  Instruction.md  LOG.md  README.md
behavior_cloning/: environment-gpu.yml  environment.yml  model.h5
behavior_cloning/code/: drive.py  train_with_fit.py
behavior_trainer/: CMakeLists.txt  package.xml
behavior_trainer/code/: train_with_fit.py  train_with_generator.py  utils.py
behavior_trainer/models/: model.h5
config/: cartpole.rviz  circle_track1_plus_2_vehicles_visualization.rviz  circle_track2_plus_1_vehicle_visualization.rviz  circle_track2_plus_2_vehicles_visualization.rviz  circle_track2_plus_3_vehicles_visualization.rviz  circle_track2_plus_4_vehicles_visualization.rviz  circle_track3_plus_6_vehicles_visualization.rviz  lane_keep.rviz  multi_vehicle_path_following_visualization.rviz  path_following_visualization.rviz  path_loader_visualization.rviz  path_loader_visulization.rviz  path_updater_visualization.rviz  standard_track1_plus_1_vehicle_visualization.rviz  standard_track_plus_6_vehicles_visualization.rviz  two_vehicle_path_following_visualization.rviz  vehicle_path_following_visualization.rviz
data/: circle_track_map.csv  highway_map.csv  standard_track_map.csv  test_track.csv
dependencies/catvehicle/: CMakeLists.txt
dependencies/obstaclestopper/: CMakeLists.txt
doc/: DRL_on_Robotics.md  dbw_notes.md  develop-log.md  latex_instruction.md
gym-vehicle/: .gitignore  INSTALL.md  README.md  entrypoint.sh  setup.py
gym-vehicle/gym_vehicle/: __init__.py
gym-vehicle/saved_weights/: multi_vehicle_3lane_circle_track_dqn_ep100.h5  multi_vehicle_3lane_circle_track_dqn_ep100.json  multi_vehicle_3lane_circle_track_dqn_ep1000.h5  multi_vehicle_3lane_circle_track_dqn_ep1000.json  multi_vehicle_3lane_circle_track_dqn_ep1100.h5  multi_vehicle_3lane_circle_track_dqn_ep1100.json  multi_vehicle_3lane_circle_track_dqn_ep1200.h5  multi_vehicle_3lane_circle_track_dqn_ep1200.json  multi_vehicle_3lane_circle_track_dqn_ep1300.h5  multi_vehicle_3lane_circle_track_dqn_ep1300.json  multi_vehicle_3lane_circle_track_dqn_ep1400.h5  multi_vehicle_3lane_circle_track_dqn_ep1400.json  multi_vehicle_3lane_circle_track_dqn_ep1500.h5  multi_vehicle_3lane_circle_track_dqn_ep1500.json  multi_vehicle_3lane_circle_track_dqn_ep1600.h5  multi_vehicle_3lane_circle_track_dqn_ep1600.json  multi_vehicle_3lane_circle_track_dqn_ep1700.h5  (+45 more)
latex/: A Learning based Adaptive Cruise and Lane Control System.docx  thesis.aux  thesis.bbl  thesis.blg  thesis.lof  thesis.lot  thesis.out  thesis.tex  thesis.toc
main_packages/traj_builder/: CMakeLists.txt
main_packages/traj_builder/include/traj_builder/: traj_builder.h
main_packages/traj_builder/src/: traj_builder.cpp
mobot/mobot_pub_des_state/: CMakeLists.txt  package.xml
mobot/mobot_pub_des_state/src/: pub_des_state.cpp  pub_des_state_flush_path_client.cpp  pub_des_state_main.cpp  pub_des_state_path_client.cpp  pub_des_state_path_replanning_client.cpp
mybot/: README.md
mybot_description/: package.xml
presentation/: Reinforcement_learning_diagram.paint  thesis_presentation.pptx  ~$thesis_presentation_ananya.pptx
ros/src/cartpole_gazebo/: CMakeLists.txt  package.xml
ros/src/cartpole_gazebo/launch/: cartpole_gazebo.launch  controller_utils.launch
ros/src/cartpole_gazebo/worlds/: empty_bullet.world
ros/src/traj_builder/: package.xml
script/: visualize_highwaymap.ipynb
thesis/: bibliography.bib  thesis.aux  thesis.bbl  thesis.blg  thesis.lof  thesis.lot  thesis.out  thesis.tex  thesis.toc
(+491 files in other folders)
