<?xml version="1.0"?>
<package>
    <name>mobot_pub_des_state</name>
    <version>0.0.0</version>
    <description>The mobot_pub_des_state package</description>
  
    <maintainer email="wyatt@todo.todo">wyatt</maintainer>

    <license>TODO</license>


    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>traj_builder</build_depend>
    <build_depend>message_generation</build_depend>   
    <run_depend>roscpp</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>traj_builder</run_depend>
    <run_depend>message_runtime</run_depend>    
    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- You can specify that this package is a metapackage here: -->
        <!-- <metapackage/> -->

        <!-- Other tools can request additional information be placed here -->
    </export>
</package>
    
