<?xml version="1.0"?>
<package>
  <name>traj_builder</name>
  <version>0.0.0</version>
  <description>The traj_builder package</description>
  
  <maintainer email="wyatt@todo.todo">wyatt</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <export>
  </export>
</package>
    
